# LinuxFontInstallerGUI

./: .gitignore  CMakeLists.txt  README.md
resources/: style.css
src/App/: GuiHelper.cpp  GuiHelper.h  main.cpp
src/Controller/: IMyWindow.h  MyWindowController.cpp  MyWindowController.h
src/Models/: FileChooser.cpp  FileChooser.h
src/View/: MyWindow.cpp  MyWindow.h  TestWindow.h
